--- a/1-simple.html
+++ b/1-simple.html
@@ -7,8 +7,7 @@
     <title>Vite + Solid</title>
   </head>
   <body>
-  <div>
-    <a href="/1-simple">1 simple</a>
-  </div>
+    <div id="root"></div>
+    <script type="module" src="/src/1-simple/index.jsx"></script>
   </body>
 </html>
