--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Solid</title>
-  </head>
-  <body>
-  <div>
-    <a href="/1-simple">1 simple</a>
-  </div>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="pico.min.css" />
+  <title>Vite + Solid Examples</title>
+</head>
+<body>
+<main class="container">
+  <h1>SolidJS Sandbox</h1>
+  <a href="/1-simple" class="nav-link">1 Simple</a>
+</main>
+</body>
 </html>
