--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="pico.min.css" />
-  <title>Vite + Solid Examples</title>
+  <title>SolidJS Sandbox</title>
 </head>
 <body>
 <main class="container">
