--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
 <main class="container">
   <h1>SolidJS Sandbox</h1>
-  <a href="/1-simple" class="nav-link">1 Simple</a>
+  <p><a href="/1-simple" class="nav-link">1 Simple</a></p>
+  <p><a href="/2-contenteditable" class="nav-link">2 ContentEditable</a></p>
 </main>
 </body>
 </html>
