--- a/2-contenteditable.html
+++ b/2-contenteditable.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="non-solid">
+      <div class="contentEditable" contenteditable="true">non-solid</div>
+    </div>
     <script type="module" src="/src/2-contenteditable/index.jsx"></script>
   </body>
 </html>
